# rs_bmi088

./: Cargo.toml  README.md  memory.x  todo.md
.cargo/: config.toml
src/: bmi088_spi.rs  futaba_sbus.rs  main.rs  math.rs  sensor.rs
