[package]
name = "my_rs_fc"
version = "0.1.0"
edition = "2021"
authors = ["insppp <freefish_zhou@foxmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
cortex-m-rtic = "1.1.3"
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }


[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f407"] # replace the model of your microcontroller here